tests/invalid/entry_invalid_parameter_type.wio
fn Entry(args: i32) -> i32 {
    return args;
}
